# cz-conventional-commmits-jira-optional

./: README.md  cz_conventional_commits_jira_optional.py  cz_conventional_commmits_jira_optional.py  main.py  pyproject.toml  setup.py
